# CoderRender

./: .gitignore  CMakeLists.txt  main.cc  readme.md
include/: Application.hpp  Window.hpp
include/component/: Camera.hpp  Component.hpp  Light.hpp  Transform.hpp
include/core/: Buffer.hpp  Event.hpp  EventListener.hpp  Log.hpp  Memory.hpp  MemoryManager.hpp  OpenGLState.hpp  Ref.hpp  RenderBuffer.hpp  TextureBuffer.hpp  Uniform.hpp  VertexBuffer.hpp
include/core/io/: IO.hpp
include/glad/: glad.h
include/math/geometry/: Geometry.hpp
include/opengl/shader/: OpenGLProgram.hpp  OpenGLShader.hpp  Program.hpp  ShaderPreProcessor.hpp
include/render/: OpenGLRenderTarget.hpp  OpenGLRenderer.hpp  Pass.hpp  RenderPass.hpp  Renderer.hpp  ShadowPass.hpp
include/scene/: Layer.hpp  Material.hpp  Mesh.hpp  Node.hpp  Scene.hpp  Screen.hpp  Texture.hpp
include/system/: CoordinateSystem.hpp  EventSystem.hpp  MemoryManager.hpp  RenderSystem.hpp  System.hpp  TimeSystem.hpp
shader/: fragment.frag  geometry.geom  tessellation.tesc  vertex.vert
shader/MRT/: fragment.frag  vertex.vert
shader/basic/: fragment.frag  vertex.vert
shader/depth/: fragment.frag  vertex.vert
shader/lib/: camera.glsl  light.glsl  material.glsl
shader/normal/: fragment.frag  vertex.vert
shader/screen/: fragment.frag  vertex.vert
src/: Application.cpp  Buffer.cpp  Camera.cpp  Component.cpp  CoordinateSystem.cpp  Event.cpp  EventSystem.cpp  Frustum.cpp  Geometry.cpp  IO.cpp  Json.cpp  Layer.cpp  Light.cpp  Log.cpp  Material.cpp  MemoryManager.cpp  Mesh.cpp  Node.cpp  Noise.cpp  OpenGLProgram.cpp  OpenGLRenderTarget.cpp  OpenGLRenderer.cpp  OpenGLShader.cpp  OpenGLState.cpp  Pass.cpp  Plane.cpp  Program.cpp  Ref.cpp  RenderBuffer.cpp  RenderPass.cpp  RenderSystem.cpp  Renderer.cpp  Scene.cpp  Screen.cpp  ShaderPreProcessor.cpp  ShadowPass.cpp  System.cpp  Test.cpp  Texture.cpp  TextureBuffer.cpp  (+6 more)
